--- a/AndroidRetrofit/app/build.gradle
+++ b/AndroidRetrofit/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
   compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
   compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
   compile 'io.reactivex:rxandroid:1.0.1'
+  compile 'com.squareup.okhttp:okhttp:2.7.0'
 }
