--- a/AndroidEventBus/app/build.gradle
+++ b/AndroidEventBus/app/build.gradle
@@ -5,8 +5,8 @@ android {
   buildToolsVersion "23.0.2"
 
   defaultConfig {
-    applicationId "me.onez.rxinandroid"
-    minSdkVersion 14
+    applicationId "me.onez.androideventbus"
+    minSdkVersion 15
     targetSdkVersion 23
     versionCode 1
     versionName "1.0"
@@ -23,9 +23,6 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.1.1'
+  compile 'org.greenrobot:eventbus:3.0.0'
 
-  compile 'io.reactivex:rxandroid:1.1.0'
-  // Because RxAndroid releases are few and far between, it is recommended you also
-  // explicitly depend on RxJava's latest version for bug fixes and new features.
-  compile 'io.reactivex:rxjava:1.1.1'
 }
