--- a/AndroidRetrofit/app/build.gradle
+++ b/AndroidRetrofit/app/build.gradle
@@ -22,14 +22,12 @@ android {
 dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.1.1'
-  compile 'com.android.support:design:23.1.1'
-  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-  compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
-  compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
-  compile 'com.squareup.okhttp3:okhttp:3.1.2'
-  compile 'io.reactivex:rxandroid:1.1.0'
-  // Because RxAndroid releases are few and far between, it is recommended you also
-  // explicitly depend on RxJava's latest version for bug fixes and new features.
-  compile 'io.reactivex:rxjava:1.1.1'
+  compile 'com.android.support:appcompat-v7:23.2.1'
+  compile 'com.android.support:design:23.2.1'
+  compile 'com.squareup.retrofit2:retrofit:2.0.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.+'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.+'
+  //  compile 'com.squareup.okhttp3:okhttp:3.+'
+  compile 'io.reactivex:rxandroid:1.1.+'
+  compile 'io.reactivex:rxjava:1.1.+'
 }
