--- a/AndroidDagger2/app/src/main/AndroidManifest.xml
+++ b/AndroidDagger2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.onez.rxinandroid">
+    package="me.onez.androiddagger2">
 
   <application
       android:allowBackup="true"
@@ -14,7 +14,6 @@
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
-
     </activity>
   </application>
 
