--- a/AndroidDagger2/app/build.gradle
+++ b/AndroidDagger2/app/build.gradle
@@ -1,13 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.2"
+  compileSdkVersion 27
+  buildToolsVersion '27.0.3'
 
   defaultConfig {
     applicationId "me.onez.androiddagger2"
     minSdkVersion 15
-    targetSdkVersion 23
+    targetSdkVersion 27
     versionCode 1
     versionName "1.0"
   }
@@ -20,8 +22,15 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.2.1'
+  api fileTree(dir: 'libs', include: ['*.jar'])
 
+  testImplementation 'junit:junit:4.12'
+
+  api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  api 'com.android.support:appcompat-v7:27.1.1'
+  api 'com.google.dagger:dagger:2.16'
+  kapt 'com.google.dagger:dagger-compiler:2.16'
+}
+repositories {
+  mavenCentral()
 }
