--- a/AndroidDagger2/app/src/main/AndroidManifest.xml
+++ b/AndroidDagger2/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="me.onez.androiddagger2">
 
   <application
+      android:name=".App"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
@@ -15,6 +16,10 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <activity android:name=".SimpleDagger2Activity"/>
+    <activity android:name=".DepDagger2Activity"/>
+    <activity android:name=".SubDagger2Activity"/>
   </application>
 
 </manifest>
